# linux_pad

./: 99-linux_evdev_gamepad.rules  99-linux_evdev_pad.rules  CMakeLists.txt  LICENSE  README.md  gamepad.cpp  gamepad.hpp  install.sh  pad.hpp  padbase.cpp  padbase.hpp
nintendo/: procon.cpp  procon.hpp
ps5/: ps5pad.cpp  ps5pad.hpp  test.cpp
